--- a/assets/css/intro.css
+++ b/assets/css/intro.css
@@ -4,7 +4,7 @@
     padding: 5rem 0;
     text-align: center;
 }
-.intro-box{
+.intro .box{
     max-width: 60rem;
     margin: auto;
     padding: 2rem;
@@ -17,7 +17,7 @@
 
 .intro .subtitle{
     font-size: 1.8rem;
-    line-height: 3rem;
+    line-height: 3rem; /*altura de linha*/
 }
 
 @media (width > 600px) {
