--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,10 +1,10 @@
 :root{
     --background: #ffffff;
-    --foreground: #6e07f3;
+    --foreground: #479bc2;
     --primary: #141c3a;
     --primary-light: #cdd3eb;
     --primary-foreground: #fff;
-    --secondary: #5be8b9;
+    --secondary: #479bc2;
     --secondary-foreground: #141c3a;
 }
 
