--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,6 +1,6 @@
 footer{
     background-color: var(--foreground);
-    color: var(--primary-light); 
+    color: var(--primary-light);
     padding: 6rem 2rem;
     text-align: center;
 }
@@ -20,4 +20,27 @@ footer .social{
     max-width: 40rem;
     margin: auto;
     margin-bottom: 4rem;
+}
+footer .social a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    border: 0.2rem solid var(--primary-light);
+}
+footer .social a img{
+    width: 2rem;
+    height: 2rem;
+}
+footer .social a:hover{
+    opacity: 8;
+}
+footer .copyright{
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+}
+footer .legal{
+    font-size: 1.5rem;
 }
